--- a/styles/style_posts.css
+++ b/styles/style_posts.css
@@ -1,8 +1,9 @@
+@import url(vim.css);
+
 .page {
   display: flex;
   flex-wrap: wrap;
   padding: 2em;
-  width:;
 }
 
 .section {
@@ -13,18 +14,60 @@
 
 body {
   background: black;
-  font-family: arial; 
-  font-size: 100%;
+  font-family: arial;
+/*  font-size: 100%;*/
 }
+
+
+/*POST BODY STYLES*/
+/*------*/
+.post-body{
+  border-radius: 5px;
+  background: black;
+/*  background: white;*/
+  width:  45em;
+  margin: 0 auto;
+  color: white;
+}
+
+.post-body p{
+/*  color: white;*/
+  color: white;
+}
+
+.post-title{
+  font-size: 1.6em;
+  padding: 5% 5% 1% 5%;
+}
+
+.post-meta{
+  padding: 0% 5% 0% 5%;
+}
+
+.post-content{
+  padding: 0 5% 4% 5%;
+} 
+
+.dt-published{
+  color: black;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+}
+
 
 .club-higlight {
   text-align: left;
 }
 
-#info-panel {
-  font-weight: bolder; 
-  font-size: 1.2em;
-  line-height: 0.5;
+/*CODE STYLE*/
+.highlighter-rouge{
+  width: 90%;
+  margin: 0 auto;
+}
+
+.highlight{
+  padding: 1% 2% 1% 2%;
+  border-radius: 5px;
 }
 
 p {
@@ -37,14 +80,20 @@ p {
 
 #title-panel {
   font-weight: bold;
-  font-size: 1.2em;
-  line-height: 0.25;
+/*  line-height: 0.25;*/
+  font-size: 1.6em;
+
 }
 
 .title-text {
   color: white;
+  font-size: 1em;
   font-weight: bolder; 
   text-align: left;
+}
+
+.title-text span {
+  border-bottom: 4px solid white;
 }
 
 .nav-bar {
@@ -89,7 +138,14 @@ p {
 
 }
 
-/* Desktop Styles */
+@media (max-width: 41em) {
+  .post-body{
+    width:  95%;
+  }
+
+}
+
+/*/* Desktop Styles */
 @media only screen and (min-width: 961px) {
   #title-panel {
     font-size: 1.6em;
@@ -110,7 +166,3 @@ p {
     padding: 1em 2em;
   }
 }
-/*
-.post-list{
-  margin: 0 auto;
-}*/
