Add google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/styles/sanitize.css">
     <link rel="stylesheet" href="/styles/style_posts.css">
+    {% include google-analytics.html %}
   </head>
   <body>
 
