Changed the site title to the logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,18 +8,18 @@
     {% include google-analytics.html %}
   </head>
   <body>
-
-    <nav class="nav-bar">
-      <section id="title-panel" class="section">
-        <h1 class="title-text"><span>UW</span> DATA SCIENCE CLUB.</h1>
-<!--         <p>_</p> -->
-      </section>
-      <ul class="nav-list">
-        <li><a class="nav-link" href="#">Wiki</a></li>
-        <li><a class="nav-link" href="#">About</a></li>
-        <li><a class="nav-link" href="/blog.html">Blog</a></li>
-      </ul>
-    </nav>
+    <div class='container'>
+      <img class='logo' src='/assets/logo.png'>
+      <div style='display: inline-block; float: right;'>
+        <nav class="nav-bar">
+          <ul class="nav-list">
+            <li><a class="nav-link" href="#">Wiki</a></li>
+            <li><a class="nav-link" href="#">About</a></li>
+            <li><a class="nav-link" href="/blog.html">Blog</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
 
     <div class='post-body'>
       <section>
