--- a/styles/style_posts.css
+++ b/styles/style_posts.css
@@ -27,12 +27,11 @@ body {
 /*  background: white;*/
   width:  45em;
   margin: 0 auto;
-  color: white;
+  color: #f5f5f5;
 }
 
 .post-body p{
-/*  color: white;*/
-  color: white;
+  color: #f5f5f5;
 }
 
 .post-title{
@@ -49,7 +48,7 @@ body {
 } 
 
 .dt-published{
-  color: black;
+  color: #f5f5f5;
   text-decoration-line: underline;
   text-decoration-style: solid;
 }
@@ -78,25 +77,21 @@ p {
   width: 5em;
 }
 
-#title-panel {
-  font-weight: bold;
-/*  line-height: 0.25;*/
-  font-size: 1.6em;
 
+.logo{
+  height: 6em;
+  width: 6em;
+  display: inline-block;
+  margin-left: 26%;
 }
 
-.title-text {
-  color: white;
-  font-size: 1em;
-  font-weight: bolder; 
-  text-align: left;
-}
-
-.title-text span {
-  border-bottom: 4px solid white;
+.container{
+  height: 5em;
+  white-space: nowrap;
 }
 
 .nav-bar {
+  width: 70%;
   display: flex;
   justify-content: flex-end;
   padding: 0 2em;
