Changed logo to also be a link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class='container'>
-      <img class='logo' src='/assets/logo.png'>
+      <a href='/'><img class='logo' src='/assets/logo.png'></a>
       <div style='display: inline-block; float: right;'>
         <nav class="nav-bar">
           <ul class="nav-list">
