--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
           <ul class="nav-list">
             <li><a class="nav-link" href="#">Wiki</a></li>
             <li><a class="nav-link" href="#">About</a></li>
-            <li><a class="nav-link" href="/blog.html">Blog</a></li>
+            <li><a class="nav-link" href="#">Blog</a></li>
           </ul>
         </nav>
       </div>
