--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,15 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/styles/sanitize.css">
     <link rel="stylesheet" href="/styles/style_posts.css">
     {% include google-analytics.html %}
   </head>
   <body>
+    <a class='small-screen-logo' href='/'><img class='logo' src='/assets/logo.png'></a>
     <div class='container'>
-      <a href='/'><img class='logo' src='/assets/logo.png'></a>
-      <div style='display: inline-block; float: right;'>
+      <a class='big-screen-logo' href='/'><img class='logo' src='/assets/logo.png'></a>
+      <div class='nav-box' style='display: inline-block; float: right;'>
         <nav class="nav-bar">
           <ul class="nav-list">
             <li><a class="nav-link" href="#">Wiki</a></li>
