Added mathjax script to include on each page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles/sanitize.css">
     <link rel="stylesheet" href="/styles/style_posts.css">
     {% include google-analytics.html %}
+    {% include mathjax.html %}
   </head>
   <body>
     <a class='small-screen-logo' href='/'><img class='logo' src='/assets/logo.png'></a>
