Move navigation to _includes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,13 +14,7 @@
     <div class='container'>
       <a class='big-screen-logo' href='/'><img class='logo' src='/assets/logo.png'></a>
       <div class='nav-box' style='display: inline-block; float: right;'>
-        <nav class="nav-bar">
-          <ul class="nav-list">
-            <li><a class="nav-link" href="#">Wiki</a></li>
-            <li><a class="nav-link" href="#">About</a></li>
-            <li><a class="nav-link" href="#">Blog</a></li>
-          </ul>
-        </nav>
+        {% include navigation.html %}
       </div>
     </div>
 
