--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,5 @@
 <nav class="nav-bar">
+  <p class="logo">UW DSC.</p>
   <ul class="nav-list">
     <li><a class="nav-link" href="#">Wiki</a></li>
     <li><a class="nav-link" href="/">About</a></li>
