--- a/styles/style.css
+++ b/styles/style.css
@@ -56,9 +56,8 @@ p {
   align-items: center;
 }
 
-.nav-list li {
-  display: inline;
-  padding: 0 1em;
+.nav-list {
+  display: none;
 }
 
 .nav-link {
@@ -120,8 +119,62 @@ p {
   font-weight: 600;
 }
 
+.menu-btn > img {
+  width: 2.5em;
+}
+
+.close-btn > img {
+  width: 2.5em;
+}
+
+#overlay-nav {
+  height: 0%;
+  width: 100%;
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  background-color: rgb(0,0,0); /* Black fallback color */
+  background-color: rgba(0,0,0, 0.95); /* Black w/opacity */
+  transition: 0.5s;
+}
+
+#overlay-nav > .close-btn {
+  position: absolute;
+  top: 2.5em;
+  right: 1em;
+  margin: 1em;
+}
+
+.nav-menu {
+  position: relative;
+  padding: 0;
+  top: 20%;
+}
+
+.nav-menu > li {
+  list-style: none;
+  margin-top: 2em;
+  text-align: center;
+}
+
+.nav-menu .nav-link {
+  font-size: 2em;
+}
+
 /* Tablet Styles */
 @media only screen and (min-width: 768px) and (max-width: 960px), (orientation: landscape) {
+  .nav-list {
+    display: inline;
+  }
+
+  .nav-list li {
+    display: inline;
+    padding: 0 1em;
+  }
+
   #highlights-panel {
     font-size: 1.2em;
   }
@@ -136,6 +189,10 @@ p {
 
   #summary-panel > h2 {
     font-size: 1.4em;
+  }
+
+  .menu-btn {
+    display: none;
   }
 }
 
