Refactor html using layouts

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,10 +13,10 @@
   <ul class="nav-list">
     {% include nav-links.html %}
   </ul>
-  <a class="menu-btn" href="javascript:void(0)" onclick="openNav()"><img src="assets/menu.svg" alt=""/></a>
+  <a class="menu-btn" href="javascript:void(0)" onclick="openNav()"><img src="/assets/menu.svg" alt=""/></a>
 </nav>
 <div id="overlay-nav">
-  <a class="close-btn" href="javascript:void(0)" onclick="closeNav()"><img src="assets/close.svg" alt=""/></a>
+  <a class="close-btn" href="javascript:void(0)" onclick="closeNav()"><img src="/assets/close.svg" alt=""/></a>
   <ul class="nav-menu">
     {% include nav-links.html %}
   </ul>
