--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,30 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/styles/sanitize.css">
-    <link rel="stylesheet" href="/styles/style_posts.css">
-    {% include google-analytics.html %}
-    {% include mathjax.html %}
-  </head>
-  <body>
-    <a class='small-screen-logo' href='/'><img class='logo' src='/assets/logo.png'></a>
-    <div class='container'>
-      <a class='big-screen-logo' href='/'><img class='logo' src='/assets/logo.png'></a>
-      <div class='nav-box' style='display: inline-block; float: right;'>
-        {% include navigation.html %}
-      </div>
-    </div>
-
-    <div class='post-body'>
-      <section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="theme-color" content="#000000" />
+  <title>UW Data Science Club</title>
+  <link rel="stylesheet" href="/styles/sanitize.css">
+  <link rel="stylesheet" href="/styles/style.css">
+  {% include google-analytics.html %}
+</head>
+<body>
+    <div class="wrapper">
+    {% include navigation.html %}
         {{ content }}
-      </section>
     </div>
-    <footer>
-      &copy; to me
-    </footer>
-  </body>
+</body>
 </html>
