--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="theme-color" content="#000000" />
-  <title>UW Data Science Club</title>
-  <link rel="stylesheet" href="/styles/sanitize.css">
-  <link rel="stylesheet" href="/styles/style.css">
-  {% include google-analytics.html %}
+    {% include head-tags.html %}
 </head>
 <body>
     <div class="wrapper">
-    {% include navigation.html %}
+        {% include navigation.html %}
         {{ content }}
     </div>
 </body>
