Add home link to logo

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,7 +9,7 @@
 </script>
 
 <nav class="nav-bar">
-  <p class="logo">UW DSC.</p>
+  <a class="logo" href="/">UW DSC.</a>
   <ul class="nav-list">
     {% include nav-links.html %}
   </ul>
