--- a/styles/style.css
+++ b/styles/style.css
@@ -117,6 +117,12 @@ p {
 .logo {
   font-size: 2em;
   font-weight: 600;
+  color: white;
+  text-decoration: none;
+}
+
+.logo:visited {
+  color: white;
 }
 
 .menu-btn > img {
