--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   flex-wrap: wrap;
-  padding: 0em 2em;
+  padding: 1em 2em;
   max-width: 864px;
   margin: 0 auto;
   width: 100%
@@ -148,6 +148,7 @@ p {
 }
 
 .post-link {
+  color: white;
   text-decoration: none;
 }
 
@@ -181,6 +182,10 @@ p {
 
 /* Tablet Styles */
 @media only screen and (min-width: 768px) {
+  .wrapper {
+    padding: 3em 2em;
+  }
+
   .nav-list {
     display: inline;
   }
@@ -242,9 +247,5 @@ p {
     display: flex;
     justify-content: space-around;
     align-items: center;
-  }
-
-  .nav-bar {
-    padding: 1em 0;
   }
 }
