--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,12 @@
 <body>
     <div class="wrapper">
     {% include navigation.html %}
-        <article>
-        {{ content }}
+        <article id="post-content">
+            <div id="post-meta">
+                <h1 id="post-title">{{ page.title}}</h1>
+                <h2 id="post-date">{{ page.date | date: "%B %d, %Y" }}</h2>
+            </div>
+            {{ content }}
         </article>
     </div>
 </body>
