--- a/styles/style_posts.css
+++ b/styles/style_posts.css
@@ -1,22 +1,20 @@
 @import url(railscasts.css);
 
-/*POST BODY STYLES*/
-/*------*/
-.post-body p {
-  color: #f5f5f5;
+#post-content {
+  margin: 4em 0;
 }
 
-.post-title {
-  font-size: 1.6em;
-  padding: 5% 5% 1% 5%;
+#post-meta {
+  margin-bottom: 2em;
 }
 
-.post-meta {
-  padding: 0% 5% 0% 5%;
+#post-title {
+  margin: 0.4em 0;
 }
 
-.post-content {
-  padding: 0 5% 4% 5%;
+#post-date {
+  margin: 0.4em 0;
+  font-size: 1.2em;
 }
 
 /*CODE STYLE*/
