--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,7 @@ p {
 #highlights-panel {
   font-weight: 1000;
   font-size: 0.8em;
+  margin-bottom: 2em;
 }
 
 .title-text {
@@ -185,14 +186,6 @@ p {
   #highlights-panel {
     font-size: 1.2em;
     width: 50%;
-  }
-
-  #summary-panel {
-    width: 50%;
-  }
-
-  #info-block {
-    display: flex;
   }
 
   .wrapper {
