--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,4 @@
 .wrapper {
-  display: flex;
-  flex-wrap: wrap;
   padding: 1em 2em;
   max-width: 864px;
   margin: 0 auto;
@@ -103,7 +101,7 @@ p {
 }
 
 #info-block {
-  margin: 3em 0;
+  margin-top: 3em;
 }
 
 #summary-panel > h2 {
@@ -179,6 +177,38 @@ p {
 
 .nav-menu .nav-link {
   font-size: 2em;
+}
+
+#social-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 2em;
+}
+
+.social-button {
+  display: block;
+  padding: 0.5em 1em;
+  border-radius: 3px;
+  text-decoration: none;
+  font-weight: 500;
+  color: white;
+  margin-right: 1em;
+}
+
+.social-button:visited {
+  color: white;
+}
+
+#fb-button {
+  background-color: #3B5998;
+}
+
+#mail-button {
+  background-color: #D44638;
+}
+
+#blog-preview {
+  margin-top: 2em;
 }
 
 /* Tablet Styles */
