--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,3 +1,3 @@
 <li><a class="nav-link" href="/">About</a></li>
 <li><a class="nav-link" href="/calendar">Calendar</a></li>
-<li><a class="nav-link" href="#">Blog</a></li>
+<li><a class="nav-link" href="/blog">Blog</a></li>
