--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,7 @@
                 <h1 id="post-title">{{ page.title}}</h1>
                 <h2 id="post-date">{{ page.date | date: "%B %d, %Y" }}</h2>
             </div>
+            <hr class="post-hr"/>
             {{ content }}
         </article>
     </div>
