--- a/styles/style.css
+++ b/styles/style.css
@@ -211,6 +211,10 @@ p {
   margin-top: 2em;
 }
 
+#blog-list {
+  margin-top: 4em;
+}
+
 /* Tablet Styles */
 @media only screen and (min-width: 768px) {
   #highlights-panel {
