--- a/styles/style_posts.css
+++ b/styles/style_posts.css
@@ -5,7 +5,7 @@
 }
 
 #post-meta {
-  margin-bottom: 2em;
+  margin-bottom: 0.5em;
 }
 
 #post-title {
@@ -14,7 +14,14 @@
 
 #post-date {
   margin: 0.4em 0;
-  font-size: 1.2em;
+  font-size: 1.1em;
+}
+
+.post-hr {
+  margin-top: 1em;
+  margin-bottom: 3em;
+  width: 100%;
+  border: 2px white solid;
 }
 
 /*CODE STYLE*/
