--- a/_includes/head-tags.html
+++ b/_includes/head-tags.html
@@ -4,5 +4,6 @@
 <title>UW Data Science Club</title>
 <link rel="stylesheet" href="/styles/sanitize.css">
 <link rel="stylesheet" href="/styles/style.css">
+<link rel="stylesheet" href="/styles/style_{{ page.name | replace: '.html', ''}}.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 {% include google-analytics.html %}
